force-app/shared/objects/InstalledPackage__c/InstalledPackage__c.object-meta.xml
<CustomObject>
    <label>Installed Package</label>
    <nameField>
        <label>Installed Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>