force-app/shared/objects/InstalledPackage__c/fields/IsBeta__c.field-meta.xml
<CustomField>
    <fullName>IsBeta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Beta</label>
    <type>Checkbox</type>
</CustomField>