force-app/shared/objects/InstalledPackage__c/fields/IsHasKey__c.field-meta.xml
<CustomField>
    <fullName>IsHasKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Key</label>
    <type>Checkbox</type>
</CustomField>