force-app/shared/objects/InstalledPackage__c/fields/SubscriberPackageVersionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberPackageVersionId__c</fullName>
    <label>Subscriber Package Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>